# qiuqiuqiu

./: .gitignore  AGENTS.md  Dockerfile  NOTES.md  README.md  docker-compose.yml  pyproject.toml
captures/: invesco_qqq_holdings_2026-04-24_capture_status.json  invesco_qqq_holdings_2026-04-24_proof.json  invesco_qqq_holdings_2026-04-24_proof_candidate_strict.json  invesco_qqq_holdings_2026-04-24_raw.csv  invesco_qqq_holdings_2026-04-24_raw.json  invesco_qqq_holdings_2026-05-01_capture_status.json  invesco_qqq_holdings_2026-05-01_proof.json  invesco_qqq_holdings_2026-05-01_raw.html  invesco_qqq_holdings_2026-05-01_raw.json
conductor/: hyoas_override.md
configs/: portfolio_policy_v1.yaml
docs/: ASSUMPTIONS.md  OPS_RUNBOOK.md  PIT_ADJUSTED_CLOSE_CONTRACT.md  model-spec.md  qqq_archi_spec_v1.1.md  tasks.md  weekly_digest_launchd_setup.md  weekly_digest_operator_manual.md
launchd/: com.qiuqiuqiu.weekly.plist.template
normalized/: qqq_holdings_2026-04-24_normalized.csv  qqq_holdings_2026-05-01_normalized.csv
outputs/: production_input_chain_acceptance.md  production_strict_blockers.json  production_strict_epoch_manifest.json
qqq_cycle/: __init__.py  pipeline.py
scripts/: audit_phase_x_final_replay.py  bootstrap_live_state.py  capture_invesco_holdings.py  capture_qqq_macro_price.py  capture_strict_evidence.py  diagnose_nans.py  normalize_invesco_holdings.py  refresh_micro_prices.py  run_controlled_backfill.py  run_live_pipeline.py  run_phase10.py  run_phase11.py  run_phase14_ops.py  run_phase14_publish.py  run_phase14_regime_monitor.py  run_phase15_sandbox.py  (+9 more)
(+1022 files in other folders)
