[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qqq-cycle"
version = "0.1.0"
description = "Auditable QQQ cycle-state first execution slice"
requires-python = ">=3.13"
dependencies = [
  "numpy==1.26.4",
  "pandas==3.0.1",
  "pytest==9.0.2",
  "python-dotenv==1.1.0",
  "scipy==1.15.2",
  "yfinance==0.2.54",
  "openpyxl==3.1.5",
  "lxml==5.3.1",
]

[tool.setuptools.packages.find]
include = ["qqq_cycle*"]

[tool.setuptools.package-data]
qqq_cycle = ["config/model_v22.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
